--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,24 @@
 [tool.poetry]
-name = "dl-project-template"
+name = "causal-discovery"
 version = "0.1.0"
-description = "a lightweight yet function template for deep learning projects"
-authors = ["Xiaotian Duan <xduan7@gmail.com>"]
+description = "machine learning experiments on causal discovery"
+authors = ["Xiaotian Duan <xduan7 at uchicago.edu>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-numpy = "^1.18.1"
-pandas = "^1.0.1"
-torch = "^1.4.0"
-torchvision = "^0.5.0"
-scikit-learn = "^0.22.1"
-GPUtil = "^1.4.0"
-flake8 = "^3.7.9"
-pylint = "^2.4.4"
-mypy = "^0.761"
-pytest = "^5.3.5"
+scikit-learn = "^0.23.2"
+flake8 = "^3.8.3"
+pylint = "^2.5.3"
+mypy = "^0.782"
+pytest = "^6.0.1"
+notebook = "^6.1.3"
+jupyterlab = "^2.2.5"
+ppscore = "^1.1.1"
+pandas = "^1.1.1"
+tabulate = "^0.8.7"
+
+[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry>=0.12"]
